@@ -1,5 +1,5 @@
 -----------------------------------------------------------------------------------------
-	$Id: ChangeLog,v 1.985 2011-04-27 18:21:08 remko Exp $
+	$Id: ChangeLog,v 1.986 2011-04-27 20:28:40 remko Exp $
 -----------------------------------------------------------------------------------------
 
 2011-04-27	remko
@@ -8,6 +8,7 @@
 	* gmt_grdio.c:		Better handling of grids off by 360 degrees in longitude.
 				Included in magic: look if grid can be read by GDAL.
 	* gmt_gdalread.c:	Added GMT_is_gdal_grid.
+	* gmt_plot.c:		Rotate annotations by 180 degrees when "seen from North" in 3D.
 
 2011-04-26	pwessel
 	* grdblend_func.c:	Can now take a list of grids (e.g., *.nc) instead of the
